tests/baselines/reference/ClassDeclaration8.errors.txt
==== tests/cases/compiler/ClassDeclaration8.ts (1 errors) ====
    class C {
      constructor();
      ~~~~~~~~~~~~~~
!!! error TS2390: Constructor implementation is missing.
    }